Finished tasks of Course 2, Assessment 2

--- a/course2/week1/examples/conFusion/css/mystyles.css
+++ b/course2/week1/examples/conFusion/css/mystyles.css
@@ -34,6 +34,12 @@ body {
     z-index: 0;
 }
 
+@media (min-width: 768px) and (max-width: 1199px) {
+    body {
+        padding: 150px 0 0 0;
+    }
+}
+
 .navbar-inverse {
     background: #303f9f;
 }
