--- a/course2/week1/examples/conFusion/css/mystyles.css
+++ b/course2/week1/examples/conFusion/css/mystyles.css
@@ -72,3 +72,10 @@ body {
 .navbar-inverse .navbar-nav .navbar-form label {
     color: #fff;
 }
+
+.tab-content {
+    border-left: 1px solid #ddd;
+    border-right: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
+    padding: 10px;
+}
