--- a/course2/week1/examples/conFusion/css/mystyles.css
+++ b/course2/week1/examples/conFusion/css/mystyles.css
@@ -1,96 +1,99 @@
+.dark-bg-white-color {
+  background: #303f9f;
+  color: #fff;
+}
 .row-header {
-    margin: 0 auto;
-    padding: 0 auto;
+  margin: 0 auto;
+  padding: 0 0;
 }
-
 .row-content {
-    margin: 0 auto;
-    padding: 50px 0 50px 0;
-    border-bottom: 1px ridge;
-    min-height: 400px;
+  margin: 0 auto;
+  padding: 50px 0;
+  border-bottom: 1px ridge;
+  min-height: 400px;
 }
-
 .row-footer {
-    background-color: #afafaf;
-    margin: 0 auto;
-    padding: 20px 0 20px 0;
+  margin: 0 auto;
+  padding: 20px 0;
+  background-color: #afafaf;
 }
-
 .jumbotron {
-    padding: 70px 30px 70px 30px;
-    margin: 0 auto;
-    background: #7986cb;
-    color: floralwhite;
+  margin: 0 auto;
+  padding: 70px 30px;
+  background: #7986CB;
+  color: floralwhite;
 }
-
-address {
-    font-size: 80%;
-    margin: 0;
-    color: #0f0f0f;
-}
-
-body {
-    padding: 50px 0 0 0;
-    z-index: 0;
-}
-
-.navbar-inverse {
-    background: #303f9f;
-}
-
-.navbar-inverse .navbar-nav > .active > a,
-.navbar-inverse .navbar-nav > .active > a:hover,
-.navbar-inverse .navbar-nav > .active > a:focus {
-    color: #fff;
-    background: #1a237e;
-}
-
-.navbar-inverse .navbar-nav > .open > a,
-.navbar-inverse .navbar-nav > .open > a:hover,
-.navbar-inverse .navbar-nav > .open > a:focus {
-    color: #fff;
-    background: #1a237e;
-}
-
-.navbar-inverse .navbar-nav .open .dropdown-menu > li > a,
-.navbar-inverse .navbar-nav .open .dropdown-menu {
-    color: #eee;
-    background: #303f9f;
-}
-
-.navbar-inverse .navbar-nav .open .dropdown-menu > li > a:hover {
-    color: #000;
-    background: #eee;
-}
-
-.tab-content {
-    border-left: 1px solid #ddd;
-    border-right: 1px solid #ddd;
-    border-bottom: 1px solid #ddd;
-    padding: 10px;
-}
-
-.affix {
-    top: 100px;
-}
-
 .carousel {
-    background: #1a237e;
+  background: #1a237e;
 }
-
 .carousel .item {
-    height: 300px;
+  height: 300px;
 }
-
-.item img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    min-height: 300px;
+.carousel .item img {
+  left: 0;
+  min-height: 300px;
+  position: absolute;
+  top: 0;
 }
-
+.navbar-inverse {
+  background: #303f9f;
+  color: #fff;
+}
+.navbar-inverse .navbar-nav > .active > a {
+  background: #303f9f;
+  color: #fff;
+}
+.navbar-inverse .navbar-nav > .active > a:hover {
+  background: #303f9f;
+  color: #fff;
+}
+.navbar-inverse .navbar-nav > .active > a:focus {
+  background: #303f9f;
+  color: #fff;
+}
+.navbar-inverse .navbar-nav > .open > a {
+  background: #303f9f;
+  color: #fff;
+}
+.navbar-inverse .navbar-nav > .open > a:hover {
+  background: #303f9f;
+  color: #fff;
+}
+.navbar-inverse .navbar-nav > .open > a:focus {
+  background: #303f9f;
+  color: #fff;
+}
+.navbar-inverse .navbar-nav .open .dropdown-menu > li > a {
+  background-color: #303f9f;
+  color: #eee;
+}
+.navbar-inverse .navbar-nav .open .dropdown-menu > li > a:hover {
+  color: #000;
+}
+.navbar-inverse .navbar-nav .open .dropdown-menu {
+  background-color: #303f9f;
+  color: #eee;
+}
+address {
+  font-size: 80%;
+  margin: 0;
+  color: #0f0f0f;
+}
+body {
+  padding: 50px 0 0 0;
+  z-index: 0;
+}
+.tab-content {
+  border-left: 1px solid #ddd;
+  border-right: 1px solid #ddd;
+  border-bottom: 1px solid #ddd;
+  padding: 10px;
+}
+.affix {
+  top: 100px;
+}
 #carouselButtons {
-    right:0;
-    position: absolute;
-    bottom: 0;
+  right: 0;
+  position: absolute;
+  bottom: 0;
 }
