--- a/course3/conFusion/app/views/aboutus.html
+++ b/course3/conFusion/app/views/aboutus.html
@@ -12,7 +12,7 @@
                <hr>
             </div>
         </div>
-        
+
         <div class="row row-content">
             <div class="col-xs-12 col-sm-8">
                 <h2>Our History</h2>
@@ -22,9 +22,9 @@
                     <blockquote>
                         <p>You better cut the pizza in four pieces because
                             I'm not hungry enough to eat six.</p>
-                        <footer>Yogi Berra,  
+                        <footer>Yogi Berra,
                         <cite title="Source Title">The Wit and Wisdom of Yogi Berra, P. Pepe, Diversion Books, 2014</cite></footer>
-                    </blockquote>                
+                    </blockquote>
                 </div>
 
             </div>
@@ -54,15 +54,23 @@
         <div class="row row-content">
             <div class="col-xs-12 col-sm-9">
                 <h2>Corporate Leadership</h2>
-               <ul class="media-list">
-					<h4>Implement the Corporate Leaders List here</h4>
-               </ul>
-
+                <ul class="media-list">
+                    <li class="media" ng-repeat="leader in leaders">
+                       <div class="media-left media-middle">
+                           <img class="media-object img-thumbnail"
+                                src="{{leader.image}}" alt="{{leader.name}}">
+                       </div>
+                       <div class="media-body">
+                           <h2 class="media-heading">{{leader.name}} <small>{{leader.designation}}</small></h2>
+                           <p>{{leader.description}}</p>
+                       </div>
+                    </li>
+                </ul>
             </div>
              <div class="col-xs-12 col-sm-3">
                 <p style="padding:20px;"></p>
             </div>
-       </div>
+        </div>
         <div class="row row-content">
             <div class="col-xs-12 col-sm-9">
                 <h2>Facts &amp; Figures</h2>
@@ -95,7 +103,7 @@
                         <td>
                             40
                         </td>
-                    
+
                     </tr>
                     <tr>
                         <th>
@@ -110,7 +118,7 @@
                         <td>
                             100,000
                         </td>
-                    
+
                     </tr>
                     <tr>
                         <th>
@@ -125,7 +133,7 @@
                         <td>
                             45
                         </td>
-                    
+
                     </tr>
                     <tr>
                         <th>
@@ -140,7 +148,7 @@
                         <td>
                             ~$3,000,000
                         </td>
-                    
+
                     </tr>
                 </table>
                 </div>
@@ -148,5 +156,5 @@
              <div class="col-xs-12 col-sm-3">
                 <p style="padding:20px;"></p>
             </div>
-       </div> 
+       </div>
     </div>
