--- a/course3/conFusion/app/views/home.html
+++ b/course3/conFusion/app/views/home.html
@@ -6,7 +6,19 @@
                 <h3 align=center>Our Lipsmacking Culinary Creations</h3>
             </div>
             <div class="col-xs-12 col-sm-9 col-sm-pull-3">
-				<h4>Implement the Featured Dish Here</h4>
+                <div class="media">
+                    <div class="media-left media-middle">
+                        <a ui-sref="app.dishdetails({id:featuredDish._id})">
+                            <img class="media-object img-thumbnail"
+                                 src="{{featuredDish.image}}" alt="{{featuredDish.name}}">
+                        </a>
+                    </div>
+                    <div class="media-body">
+                        <h2 class="media-heading">{{featuredDish.name}} <span class="label label-danger">{{featuredDish.label}}</span> <span class="badge">{{featuredDish.price|currency}}</span></h2>
+                        <p>{{featuredDish.description}}</p>
+                    </div>
+                </div>
+
             </div>
         </div>
 
@@ -17,7 +29,18 @@
                 <h3 align=center>This Month's Promotions</h3>
             </div>
             <div class="col-xs-12 col-sm-9">
-				<h4>Implement the Promotion Here</h4>
+                <div class="media">
+                    <div class="media-body">
+                        <h2 class="media-heading">{{promotion.name}} <span class="label label-danger">{{promotion.label}}</span> <span class="badge">{{promotion.price|currency}}</span></h2>
+                        <p>{{promotion.description}}</p>
+                    </div>
+                    <div class="media-right media-middle">
+                        <a href="#">
+                            <img class="media-object img-thumbnail"
+                                 src="{{promotion.image}}" alt="{{promotion.name}}">
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
 
@@ -27,7 +50,18 @@
                 <h3 align=center>Meet our Culinary Specialists</h3>
             </div>
             <div class="col-xs-12 col-sm-9 col-sm-pull-3">
-				<h4>Implement the Executive Chef Info Here</h4>
+                <div class="media">
+                    <div class="media-left media-middle">
+                        <a href="#">
+                            <img class="media-object img-thumbnail"
+                                 src="{{chef.image}}" alt="{{chef.name}}">
+                        </a>
+                    </div>
+                    <div class="media-body">
+                        <h2 class="media-heading">{{chef.name}} <small>{{chef.designation}}</small></h2>
+                        <p>{{chef.description}}</p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
