--- a/course3/conFusion/app/views/dishdetail_week2.html
+++ b/course3/conFusion/app/views/dishdetail_week2.html
@@ -10,11 +10,11 @@
     <title>Ristorante Con Fusion: Menu</title>
         <!-- Bootstrap -->
 <!-- build:css styles/main.css -->
-    <link href="../bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="../bower_components/bootstrap/dist/css/bootstrap-theme.min.css" rel="stylesheet">
-    <link href="../bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-    <link href="styles/bootstrap-social.css" rel="stylesheet">
-    <link href="styles/mystyles.css" rel="stylesheet">
+    <!--<link href="../bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">-->
+    <!--<link href="../bower_components/bootstrap/dist/css/bootstrap-theme.min.css" rel="stylesheet">-->
+    <!--<link href="../bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet">-->
+    <!--<link href="styles/bootstrap-social.css" rel="stylesheet">-->
+    <!--<link href="styles/mystyles.css" rel="stylesheet">-->
 <!-- endbuild -->
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -109,8 +109,8 @@
     </div>
 
 <!-- build:js scripts/main.js -->
-    <script src="../bower_components/angular/angular.min.js"></script>
-    <script src="scripts/app_week2.js"></script>
+    <!--<script src="../bower_components/angular/angular.min.js"></script>-->
+    <!--<script src="scripts/app_week2.js"></script>-->
 <!-- endbuild -->
 
 </body>
