--- a/course3/conFusion/app/views/home.html
+++ b/course3/conFusion/app/views/home.html
@@ -13,7 +13,7 @@
                     <div class="media-left media-middle">
                         <a ui-sref="app.dishdetails({id:featuredDish.id})">
                             <img class="media-object img-thumbnail"
-                                 src="{{featuredDish.image}}" alt="{{featuredDish.name}}">
+                                 ng-src="{{featuredDish.image}}" alt="{{featuredDish.name}}">
                         </a>
                     </div>
                     <div class="media-body">
