--- a/course3/conFusion/app/views/home.html
+++ b/course3/conFusion/app/views/home.html
@@ -7,7 +7,7 @@
             </div>
             <div class="col-xs-12 col-sm-9 col-sm-pull-3">
                 <div ng-if="!showDish">
-                    <h3>{{message}}</h3>
+                    <h3>{{messageDish}}</h3>
                 </div>
                 <div class="media" ng-if="showDish">
                     <div class="media-left media-middle">
@@ -32,7 +32,10 @@
                 <h3 align=center>This Month's Promotions</h3>
             </div>
             <div class="col-xs-12 col-sm-9">
-                <div class="media">
+                <div ng-if="!showPromotion">
+                    <h3>{{messagePromotion}}</h3>
+                </div>
+                <div class="media" ng-if="showPromotion">
                     <div class="media-body">
                         <h2 class="media-heading">{{promotion.name}} <span class="label label-danger">{{promotion.label}}</span> <span class="badge">{{promotion.price|currency}}</span></h2>
                         <p>{{promotion.description}}</p>
@@ -53,16 +56,16 @@
                 <h3 align=center>Meet our Culinary Specialists</h3>
             </div>
             <div class="col-xs-12 col-sm-9 col-sm-pull-3">
+                <div ng-if="!showLeader">
+                    <h3>{{messageLeader}}</h3>
+                </div>
                 <div class="media">
                     <div class="media-left media-middle">
-                        <a href="#">
-                            <img class="media-object img-thumbnail"
-                                 src="{{chef.image}}" alt="{{chef.name}}">
-                        </a>
+                        <img class="media-object img-thumbnail" src="{{leader.image}}" alt="{{leader.name}}">
                     </div>
                     <div class="media-body">
-                        <h2 class="media-heading">{{chef.name}} <small>{{chef.designation}}</small></h2>
-                        <p>{{chef.description}}</p>
+                        <h2 class="media-heading">{{leader.name}} <small>{{leader.designation}}</small></h2>
+                        <p>{{leader.description}}</p>
                     </div>
                 </div>
             </div>
