--- a/course4/Ionic/conFusion/www/templates/contactus.html
+++ b/course4/Ionic/conFusion/www/templates/contactus.html
@@ -11,7 +11,7 @@
                 HONG KONG<br/>
                 <i class="icon ion-android-call"></i>: +852 1234 5678<br/>
                 <i class="icon ion-printer"></i>: +852 8765 4321<br/>
-                <i class="icon ion-android-mail"></i>: <a href="mailto:confusion@food.net">confusion@food.net</a><br/><br//>
+                <i class="icon ion-android-mail"></i>: <a href="mailto:confusion@food.net">confusion@food.net</a><br/><br/>
             </div>
             <div class="button-bar">
                 <a class="button button-positive"><i class="icon icon-left ion-android-call"></i> Call</a>
