--- a/course4/Ionic/conFusion/www/templates/menu.html
+++ b/course4/Ionic/conFusion/www/templates/menu.html
@@ -16,8 +16,10 @@
       <img ng-src="{{baseURL+dish.image}}">
       <h2>{{dish.name}}
         <span style="font-size:75%">{{dish.price | currency}}</span>
-        <span class="badge badge-assertive">{{dish.label}}</span></h2>
+        <span class="badge badge-assertive">{{dish.label}}</span>
+      </h2>
       <p>{{dish.description}}</p>
+      <ion-option-button class="button-assertive icon ion-plus-circled" ng-click="addFavorite({{dish.id}})">Favorite</ion-option-button>
     </ion-item>
   </ion-list>
 </ion-content>
