--- a/course4/Ionic/conFusion/www/templates/menu.html
+++ b/course4/Ionic/conFusion/www/templates/menu.html
@@ -19,7 +19,7 @@
         <span class="badge badge-assertive">{{dish.label}}</span>
       </h2>
       <p>{{dish.description}}</p>
-      <ion-option-button class="button-assertive icon ion-plus-circled" ng-click="addFavorite({{dish.id}})">Favorite</ion-option-button>
+      <ion-option-button class="button-assertive icon ion-plus-circled" ng-click="addFavorite(dish.id)">Favorite</ion-option-button>
     </ion-item>
   </ion-list>
 </ion-content>
