Finished assignment course 4, week 3

--- a/course4/Ionic/conFusion/www/templates/aboutus.html
+++ b/course4/Ionic/conFusion/www/templates/aboutus.html
@@ -18,10 +18,7 @@
       </div>
       <div class="item item-text-wrap">
         <ul class="list list-inset">
-          <li ng-if="!showLeaders">
-            <h3>{{message}}</h3>
-          </li>
-          <li ng-repeat="leader in leaders" class="item item-avatar item-text-wrap" ng-if="showLeaders">
+          <li ng-repeat="leader in leaders" class="item item-avatar item-text-wrap">
             <img ng-src="{{baseURL+leader.image}}" alt="{{leader.name}}">
             <h2>{{leader.name}}</h2>
             <h3>{{leader.designation}}</h3>
